Popup loosing focus through keyboard events should update HTMLSelectElement display

Ctrl-N while a popup menu is open, causes the window to loose focus, and ViewMsg_Close is sent to the popup widget.
This causes WebPagePopupImpl::close to be called.
Right now this causes the popup to close without updating the display from the provisional selection (ie HTMLSelectElement::indexToSelectOnCancel) to the actual selection.
WebPagePopupImpl::close should use WebPagePopupImpl::cancel to handle that case properly.

Loosing focus through mouse clicks were working because we manually call cancel from the mouse event handler.

Regression caused by r193034

BUG=597206

Review URL: https://codereview.chromium.org/1833843002

Cr-Commit-Position: refs/heads/master@{#383271}

Former-commit-id: 831776ec4a98f781dc8ce20bb3346538fd59b8da